[package]
name = "disjoint-collections"
authors = ["Timothée Haudebourg <timothee@haudebourg.net>"]
description = "Disjoint-set data structures"
categories = ["data-structures", "algorithms"]
readme = "README.md"
documentation = "https://docs.rs/disjoint-collections"
repository = "https://github.com/timothee-haudebourg/disjoint-collections-rs"
license = "MIT/Apache-2.0"
edition = "2021"
version = "0.1.0"